--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,12 @@
     align-items: center;
 }
 
+.cell img{
+    width: 48px;
+    height: 48px;
+    position: relative;
+}
+
 .black{
     background-color: #a15305;
 }
